css fixes on z-index
im trying to make the character show through

--- a/main_app/static/css/question.css
+++ b/main_app/static/css/question.css
@@ -37,6 +37,7 @@
   padding: 0em;
   height: 125px;
   margin-top: 20px;
+  z-index: 2;
 }
 
 #question-title-txt {
@@ -48,6 +49,7 @@
   top: 0;
   left: 10px;
   padding: 2px;
+  z-index: 1;
 }
 
 .answer {
@@ -60,6 +62,7 @@
   margin: 1rem;
   align-content: center;
   padding: 1em;
+  cursor: pointer;
 }
 
 .answer:hover {
@@ -94,13 +97,15 @@
 }
 
 .progressjs-theme-blue .progressjs-inner {
-  z-index: -1;
   height: 125px;
   transition: all 0.3s ease-out;
-  background-color: rgba(255, 0, 0, 0.479);
+  background-color: rgba(255, 0, 0, 0.137);
   border-radius: 8px;
 }
 
 .progressjs-percent {
   color: transparent;
+}
+.progressjs-inner {
+  z-index: -1;
 }
